[gd_scene load_steps=12 format=3 uid="uid://shim4hh05l0q"]

[ext_resource type="Script" uid="uid://do6ccsl3eyv3d" path="res://scenes/main_menu/button_main_menu.gd" id="1_5seab"]
[ext_resource type="PackedScene" uid="uid://cbvi7stvm27nc" path="res://scenes/fondo/fondo.tscn" id="1_ob46e"]
[ext_resource type="LabelSettings" uid="uid://ckge21bq7fha8" path="res://styles/button/game_over_style.tres" id="2_uqeha"]
[ext_resource type="FontFile" uid="uid://0nd5mqqmlmh8" path="res://assets/BotsmaticDemo-MXOr.ttf" id="3_uqeha"]
[ext_resource type="StyleBox" uid="uid://csaef33gba7tq" path="res://styles/button/button_style.tres" id="3_wem23"]
[ext_resource type="StyleBox" uid="uid://rncv8buaenqw" path="res://styles/button/pressed_style.tres" id="5_3ovsr"]
[ext_resource type="StyleBox" uid="uid://6p1tycmppw42" path="res://styles/button/hover_style.tres" id="6_5seab"]
[ext_resource type="AudioStream" uid="uid://d32joksch3d53" path="res://assets/sounds/music.mp3" id="8_4xg86"]
[ext_resource type="FontFile" uid="uid://gl5yj4pah2oh" path="res://assets/FlappyBirdRegular-9Pq0.ttf" id="9_thkx5"]
[ext_resource type="PackedScene" uid="uid://bbnu5q68tebdq" path="res://scenes/settings/settings.tscn" id="10_thkx5"]
[ext_resource type="PackedScene" uid="uid://dnoj7wv76r4kc" path="res://scenes/rank_display/rank_display.tscn" id="11_lqpn7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5seab")

[node name="Sprite2D" parent="." instance=ExtResource("1_ob46e")]

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 118.0
text = "bienvenido a flappy bird"
label_settings = ExtResource("2_uqeha")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -133.5
offset_right = 152.5
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BotonJugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_styles/normal = ExtResource("3_wem23")
theme_override_styles/pressed = ExtResource("5_3ovsr")
theme_override_styles/hover = ExtResource("6_5seab")
text = "jugar"

[node name="BotonTienda" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_styles/normal = ExtResource("3_wem23")
theme_override_styles/pressed = ExtResource("5_3ovsr")
theme_override_styles/hover = ExtResource("6_5seab")
text = "tienda"

[node name="BotonComoJugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_styles/normal = ExtResource("3_wem23")
theme_override_styles/pressed = ExtResource("5_3ovsr")
theme_override_styles/hover = ExtResource("6_5seab")
text = "como jugar"

[node name="BotonConfiguracion" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_styles/normal = ExtResource("3_wem23")
theme_override_styles/pressed = ExtResource("5_3ovsr")
theme_override_styles/hover = ExtResource("6_5seab")
text = "configuracion"

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_styles/normal = ExtResource("3_wem23")
theme_override_styles/pressed = ExtResource("5_3ovsr")
theme_override_styles/hover = ExtResource("6_5seab")
text = "salir
"

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4xg86")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 188.0
offset_right = 327.0
offset_bottom = 229.0
theme_override_fonts/font = ExtResource("9_thkx5")
theme_override_font_sizes/font_size = 50
text = "Mejor Puntaje: 0"

[node name="Settings" parent="." instance=ExtResource("10_thkx5")]
visible = false

[node name="Control" parent="." instance=ExtResource("11_lqpn7")]
layout_mode = 1
offset_left = -270.0
offset_top = -6.0
offset_right = -1.0
offset_bottom = 115.0
